--- a/movproject/movapp/templates/home2.html
+++ b/movproject/movapp/templates/home2.html
@@ -29,7 +29,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active fs-5" aria-current="page" href="{% url 'home' %}">Home</a>
+            <a class="nav-link active fs-5" aria-current="page" href="{% url 'home2' %}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active fs-5" href="{% url 'GenMovlist' %}">Genre</a>
@@ -50,11 +50,12 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-dark me-2" type="submit">Search</button>
           <!-- <button class="btn btn-danger" type="submit">SignUp</button> -->
-          <a class="btn btn-danger" href="{% url 'login' %}">SignIn</a>
+          <a class="btn btn-danger" href="{% url 'logout' %}">SignOut</a>
         </form>
       </div>
     </div>
   </nav>
+  
     <!-- --------------------------------------------carousel----------------------------------------------- -->
   <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner mt-5">
@@ -80,9 +81,10 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  
   <!-- --------------------------------------------------------------------------------------------------------------------- -->
   <div class="boxbgcolor">
-  <h2 class="fs-4">Recommended Movies</h2>
+  <h2 class="fs-4 fst-italic ms-4"> Hey, <b>{{request.user}}</b><br> Recommended Movies for you</h2>
   <!-- ------------------------------------------------card--------------------------------------------------------------------- -->
   <div class="container-fluid box1">
     <div class="row">
